[gd_scene load_steps=3 format=3 uid="uid://dciwgrlch75vn"]

[ext_resource type="Script" uid="uid://c6xh3c3trlogb" path="res://dropoff_zone/dropoff_area.gd" id="1_qru7a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qru7a"]

[node name="DropoffArea" type="Area2D"]
collision_layer = 8
script = ExtResource("1_qru7a")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="DropPoint" type="Area2D" parent="." groups=["drop_point"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPoint"]
shape = SubResource("CircleShape2D_qru7a")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
